Mon Feb 15 05:07:22 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/odds_dissector.mpc:
        * tools/odds_dissector/odds_packet.cpp:
        * tools/odds_dissector/odds_plugin.cpp:

          Updates for VC++ support.

Sun Feb 14 07:19:10 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/odds_packet.cpp:

          Added additional guard to only show sample sequence numbers
          for SAMPLE_DATA payloads.

Sun Feb 14 06:47:22 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/odds_dissector.mpc:
        * tools/odds_dissector/odds_packet.cpp:

          Renamed odds_dissector.cpp to odds_packet.cpp to reflect
          naming conventions used by other wireshark plugins.

        * tools/odds_dissector/odds_dissector.cpp:

          Removed this file.

Sun Feb 14 06:40:43 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/odds_dissector.cpp:

          Formatting updates; added additional guard for sub-messages
          and lifespan.

        * tools/odds_dissector/odds_plugin.cpp:

          Dropped use of ACE_AS_STATIC_LIBS.

Sun Feb 14 06:04:22 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/odds_dissector.cpp:
        * tools/odds_dissector/odds_plugin.cpp:

          Switched to glib model of managing exports to match other
          wireshark plugins.

        * tools/odds_dissector/odds_Export.h:

          Removed this file.

Sun Feb 14 05:45:06 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/odds_dissector.mpc:

          Added verbatim clause to omit library prefix on gnuace.

Sun Feb 14 04:37:22 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/odds_dissector.cpp:

          Renamed Message ID and Sub-Message ID fields to ID and Sub-ID,
          respectively.
